Fixed Left side menu + not showing parameters modal when we don't have at least one + rename search executions into search nodes

--- a/src/frontend/src/modules/SidebarMenu/styles/MenuItem.module.scss
+++ b/src/frontend/src/modules/SidebarMenu/styles/MenuItem.module.scss
@@ -4,7 +4,7 @@
 .itemWrapper {
   display: flex;
   align-items: center;
-  gap: 20px;
+  gap: 8px;
   height: 45px;
   width: calc(100% - 20px);
   margin: 5px 10px;
@@ -12,16 +12,18 @@
   border-radius: 10px;
   box-sizing: border-box;
   white-space: pre;
-  font-size: 18px;
+  font-size: 13px;
   color: var(--menu-text-color);
   transition: background-color 0.2s;
+  border: 1px solid var(--menuitem-border-color);
 
   &.selected {
     background-color: var(--menuitem-selected);
+    border: 1px solid var(--menuitem-selected-border-color);
   }
 
   &:hover {
-    background-color: var(--menuitem-hover);
+    border: 1px solid var(--menuitem-selected-border-color);
   }
 
   &:disabled {
