--- a/src/frontend/src/modules/SidebarMenu/styles/ProjectMenuItem.module.scss
+++ b/src/frontend/src/modules/SidebarMenu/styles/ProjectMenuItem.module.scss
@@ -1,5 +1,6 @@
 .currentProject {
-  padding: 10px 10px;
+  padding: 12px;
+  margin: 5px 10px;
   background-color: #161b22;
   border: 1px solid #30363d;
   border-radius: 6px;
