--- a/src/frontend/src/styles/index.scss
+++ b/src/frontend/src/styles/index.scss
@@ -229,7 +229,7 @@ button {
   --checkbox-border: #42424c;
   --checkbox-hover-border: #94e5f2;
   --checkbox-active-background: #2bcbe4;
-  --menu-background: #212125;
+  --menu-background: #161b22;
   --menu-text-color: #c6cdd6;
   --menu-hover-text: #242c32;
   --menu-accent-color: #2ccbe5;
@@ -282,7 +282,9 @@ button {
   --status-color-error: #FF6173;
   --status-color-pending: #A5ACB6;
   --menuitem-hover: #2ccbe51f;
-  --menuitem-selected: #2ccbe514;
+  --menuitem-selected: #1c2128;
+  --menuitem-border-color: #30363d;
+  --menuitem-selected-border-color: #58a6ff;
   --popup-shadow: #0000004d;
 }
 
